--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,10 +18,11 @@ button {
 }
 
 .dashboard-panel {
+  position: absolute;
   padding: 1rem;
   border-radius: 1rem;
   background-color: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(4px);
 }
 
 /* ==== 🛒 Producto ==== */
