--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -53,7 +53,7 @@ button {
 }
 
 .iconos{
-  margin-left: 35%;
+  z-index: 10;
 }
 
 
@@ -68,6 +68,10 @@ button {
   .producto-boton {
     width: 48%;
   }
+
+   .iconos{
+    flex-direction: column;
+  }
 }
 
 /* 🧾 md: desde 768px */
@@ -81,6 +85,11 @@ button {
   .producto-boton {
     width: 32%;
   }
+  
+ .iconos{
+    flex-direction: row;
+  }
+  
 
   .boleta-aside {
     position: fixed;
