--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -51,7 +51,10 @@ button {
   -ms-overflow-style: none;  /* IE/Edge */
   scrollbar-width: none;     /* Firefox */
 }
-
+  .iconos{
+    flex-direction: column;
+    z-index: 1;
+  }
 
 /* ====== 📱 MEDIA QUERIES ====== */
 
@@ -62,7 +65,7 @@ button {
   }
 
   .producto-boton {
-    width: 45%;
+    width: 48%;
   }
 
    .iconos{
@@ -79,11 +82,11 @@ button {
   }
 
   .producto-boton {
-    width: 30%;
+    width: 32%;
   }
   
  .iconos{
-    flex-direction: row;
+    flex-direction: column;
   }
   
 
@@ -98,7 +101,7 @@ button {
 /* 💻 lg: desde 1024px */
 @media (min-width: 1024px) {
   .producto-boton {
-    width: 25%;
+    width: 20%;
   }
 
   .dashboard-panel {
@@ -113,7 +116,7 @@ button {
 /* 🖥️ xl: desde 1280px */
 @media (min-width: 1280px) {
   .producto-boton {
-    width: 10%;
+    width: 20%;
   }
 }
 
