--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -88,6 +88,8 @@ button {
    .iconos{
     flex-direction: column;
   }
+
+  
 }
 
 /* 🧾 md: desde 768px */
@@ -151,4 +153,55 @@ button {
 
 .animate-fade-in {
   animation: fade-in 0.5s ease-out forwards;
+}
+
+
+.logo-column {
+  position: fixed;
+  top: 5rem; /* altura desde el top */
+  left: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  z-index: 50;
+}
+
+.logo-column img {
+  width: 2.5rem;
+  height: 2.5rem;
+  transition: transform 0.2s ease-in-out;
+}
+
+.logo-column img:hover {
+  transform: scale(1.2) rotate(-5deg);
+}
+
+/* Responsivo */
+.logo-column {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+@media (max-width: 640px) {
+  .logo-column {
+    flex-direction: row;
+    margin-bottom: 1rem;
+  }
+}
+
+
+@media (max-width: 768px) {
+  .logo-column {
+    top: 4rem;
+    left: 0.25rem;
+    gap: 0.75rem;
+  }
+
+  .logo-column img {
+    width: 2rem;
+    height: 2rem;
+  }
 }
